--- a/recette.css
+++ b/recette.css
@@ -10,9 +10,8 @@
 
           div.contenu {
             background-color: white;
-            margin: 60px 10% 80px 10%;
-            padding:0 30px 30px 30px ;
-            min-width: 350px;
+            margin: 40px 8px 40px 8px;
+    	    padding: 0px 8px 20px 8px;
             box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.1);
             overflow: visible;
 
@@ -37,27 +36,22 @@
             width: 100%;
         }
 
-        p.categorie {
-            background-color: black;
-            color: white;
-            display: inline-block;
-            margin-top: -15px;
-            margin-bottom: 0;
-            padding: 8px 18px;
-            font-weight: bold;
-            font-size: 16px;
-           
-        }
+p.categorie {
+    background-color: black;
+    color: white;
+    display: inline-block;
+    margin-top: -15px;
+    padding: 8px 18px;
+    margin-bottom: 0px;
+    font-weight: bold;
+    font-size: 16px;
+}
 
-        div.description {
-            text-align: center;
-        }
-
-        div.categorie {
-            margin-bottom: 0px;
-            margin-top: 0px;
-            overflow: visible;
-        }
+div.categorie {
+    margin-bottom: 0px;
+    margin-top: 0px;
+    overflow: visible;
+}
 
         div.separator {
             width: 100px;
@@ -72,39 +66,37 @@
 
         }
 
-        table.info {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
+table.info {
+    position: absolute; 
+    bottom:0; 
+    width: 100%; 
+    color: white; 
+    background-color: #6C829DC0; 
+    height: 50px
+}
 
-            color: white;
-            background-color: #6C829DC0;
-            height: 80px;
-        }
+table.info td {
+    text-align: center;
+    font-size: 12px;
+    vertical-align: top;
+}
 
-        table.info td {
-            text-align: center;
-            font-size: 14px;
-            vertical-align: top;
-        }
+table.info th {
+    font-size: 14px;
+    vertical-align: bottom;
+    padding-bottom: 8px;
+}
 
-        table.info th {
-            vertical-align: bottom;
-            font-size: 16px;
-            padding-bottom: 8px;
-        }
-
-        img.info{
-            display: block;
-            max-height: 400px;
-            object-fit: cover;
-            min-height: 200px;
-            background-color: lightgray;
-        }
-
+img.info {
+    display: block;
+    max-height: 400px;
+    object-fit: cover;
+    min-height: 200px;
+    background-color: lightgray;
+}
 
         div.colonne{
-            width: 45%;
+            width: 100%;
             margin-top: 20px;
         }
 
@@ -118,14 +110,14 @@
 
         div.col1{
             display: inline-block;
-            margin-right: 10%;
+           
         }
 
         div.col2{
             float: right;
         }
 
-        div.border p{
+        div.ingredients p{
             border : 1px solid lightgray;
             padding: 8px 0;
             font-size: 14px;
@@ -165,5 +157,48 @@
             height: 40px;
 
            }
+
+/* Styles pour ordinateur */
+@media only screen and (min-width: 768px) {
+    div.contenu {
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+        min-width: 350px;
+    }
+
+    table.info {
+        height: 80px
+    }
+    
+    table.info td {
+        font-size: 14px;
+    }
+    
+    table.info th {
+        font-size: 16px;
+    }
+
+    div.colonne {
+        width: 45%;
+    }
+    
+    div.colonne1 {
+        margin-right: 10%;
+    }
+    
+    div.colonne2 {
+        float: right;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    div.contenu {
+        margin-left: auto;
+        margin-right: auto;
+        width: 645px;
+    }
+}
+
+
 
          
